add html/grid for header

--- a/index.html
+++ b/index.html
@@ -10,47 +10,65 @@
 <body>
     <div class="sidebar">
         <div class="sidebarContent logoSection">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
             <div>Dashboard</div>
         </div>
         <div class="sidebarContent home">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">
             <div>Home</div>
         </div>
         <div class="sidebarContent profile">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Profile</div>
         </div>
         <div class="sidebarContent messages">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Messages</div>
         </div>
         <div class="sidebarContent history">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>History</div>
         </div>
         <div class="sidebarContent tasks">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Tasks</div>
         </div>
         <div class="sidebarContent communities">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Communities</div>
         </div>
         <div class="sidebarContent settings">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Settings</div>
         </div>
         <div class="sidebarContent support">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Support</div>
         </div>
         <div class="sidebarContent privacy">
-            <img src="" alt="">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
             <div>Privacy</div>
         </div>
     </div>
-    <div class="header"></div>
+    <div class="header">
+        <div class="topHalf">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">
+            <input type="text">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="40px">            
+            <div>Mr.Potato Head</div>
+        </div>
+        <div class="bottomHalf">
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="80px">
+            <div class="text">
+                <div>Hi there,</div>
+                <div>Mr.Potato Head</div>
+            </div>
+            <button></button>
+            <button></button>
+            <button></button>
+        </div>
+    </div>
     <div class="mainContent"></div>
 </body>
 </html>
