add main content layout

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">
             <input type="text">
             <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="40px">            
+            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">            
             <div>Mr.Potato Head</div>
         </div>
         <div class="bottomHalf">
@@ -64,11 +64,123 @@
                 <div>Hi there,</div>
                 <div>Mr.Potato Head</div>
             </div>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button class="new">New</button>
+            <button class="upload">Upload</button>
+            <button class="shareButn">Share</button>
         </div>
     </div>
-    <div class="mainContent"></div>
+    <div class="mainContent">
+        <div class="yourProjects">
+            <div class="name">Your Projects</div>
+            <div class="cards">
+                <div class="card1">
+                    <div class="Ccont">
+                        <div class="title">Super cool Project</div>
+                        <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                    </div>
+                    <div class="butn">
+                        <button class="fav"></button>
+                        <button class="watch"></button>
+                        <button class="share"></button>
+                    </div>
+                </div>
+                <div class="card2"><div class="Ccont">
+                    <div class="title">Super cool Project</div>
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                </div>
+                <div class="butn">
+                    <button class="fav"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div></div>
+                <div class="card3"><div class="Ccont">
+                    <div class="title">Super cool Project</div>
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                </div>
+                <div class="butn">
+                    <button class="fav"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div></div>
+                <div class="card4"><div class="Ccont">
+                    <div class="title">Super cool Project</div>
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                </div>
+                <div class="butn">
+                    <button class="fav"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div></div>
+                <div class="card5"><div class="Ccont">
+                    <div class="title">Super cool Project</div>
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                </div>
+                <div class="butn">
+                    <button class="fav"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div></div>
+                <div class="card6"><div class="Ccont">
+                    <div class="title">Super cool Project</div>
+                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                </div>
+                <div class="butn">
+                    <button class="fav"></button>
+                    <button class="watch"></button>
+                    <button class="share"></button>
+                </div></div>
+            </div>
+        </div>
+        <div class="announcements">
+            <div class="name">Announcements</div>
+            <div class="content">
+                <div class="sec1">
+                    <h4>Site Maintenance</h4>
+                    <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus aliquam eos eum fugit excepturi adipisci porro animi.</div>
+                </div>
+                <div class="sec2">
+                    <h4>Community Share Day</h4>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia fuga explicabo numquam ipsam eaque quos magni nihi.</div>
+                </div>
+                <div class="sec3">
+                    <h4>Updated Privacy Policy</h4>
+                    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sequi amet optio, minus, repellendus ullam molestias.</div>
+                </div>
+            </div>
+        </div>
+        <div class="trending">
+            <div class="name">Trending</div>
+            <div class="content">
+                <button class="acc1">
+                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="textWrapr">
+                        <div class="at">@Tegan</div>
+                        <div class="desc">World Peace Builder</div>
+                    </div>
+                </button>
+                <button class="acc2">
+                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="textWrapr">
+                        <div class="at">@Morgan</div>
+                        <div class="desc">Super Cool Project</div>
+                    </div>
+                </button>
+                <button class="acc3">
+                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="textWrapr">
+                        <div class="at">@Kendall</div>
+                        <div class="desc">Life Changing App</div>
+                    </div>
+                </button>
+                <button class="acc4">
+                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="textWrapr">
+                        <div class="at">@Alex</div>
+                        <div class="desc">No Traffic Maker</div>
+                    </div>
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
