--- a/index.html
+++ b/index.html
@@ -10,52 +10,52 @@
 <body>
     <div class="sidebar">
         <div class="sidebarContent logoSection">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+            <img src="pics/1532178198.svg" alt="" width="50px">
             <div>Dashboard</div>
         </div>
         <div class="sidebarContent home">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">
+            <img src="pics/home-circle.svg" alt="" width="30px">
             <div>Home</div>
         </div>
         <div class="sidebarContent profile">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/card-account-details.svg" alt="" width="30px">            
             <div>Profile</div>
         </div>
         <div class="sidebarContent messages">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/message-text.svg" alt="" width="30px">            
             <div>Messages</div>
         </div>
         <div class="sidebarContent history">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/history.svg" alt="" width="30px">            
             <div>History</div>
         </div>
         <div class="sidebarContent tasks">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/checkbox-marked-circle-auto-outline.svg" alt="" width="30px">            
             <div>Tasks</div>
         </div>
         <div class="sidebarContent communities">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/account-group.svg" alt="" width="30px">            
             <div>Communities</div>
         </div>
         <div class="sidebarContent settings">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/cog.svg" alt="" width="30px">            
             <div>Settings</div>
         </div>
         <div class="sidebarContent support">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/help-box.svg" alt="" width="30px">            
             <div>Support</div>
         </div>
         <div class="sidebarContent privacy">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
+            <img src="pics/shield-lock.svg" alt="" width="30px">            
             <div>Privacy</div>
         </div>
     </div>
     <div class="header">
         <div class="topHalf">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">
+            <img src="pics/magnify.svg" alt="" width="30px">
             <input type="text">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="30px">            
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">            
+            <img src="pics/bell-badge-outline.svg" alt="" width="30px">            
+            <img src="pics/bobby-iv-6aFkS2Ka-1U-unsplash.jpg" alt="" width="50px">            
             <div>Mr.Potato Head</div>
         </div>
         <div class="bottomHalf">
