replace placeholder imgs

--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
             <img src="pics/magnify.svg" alt="" width="30px">
             <input type="text">
             <img src="pics/bell-badge-outline.svg" alt="" width="30px">            
-            <img src="pics/bobby-iv-6aFkS2Ka-1U-unsplash.jpg" alt="" width="50px">            
+            <div class="imgWrapr">
+                <img src="pics/bobby-iv-6aFkS2Ka-1U-unsplash.jpg" alt="" width="200px" >
+            </div>            
             <div>Mr.Potato Head</div>
         </div>
         <div class="bottomHalf">
-            <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="80px">
+            <div class="imgWrapr">
+                <img src="pics/bobby-iv-6aFkS2Ka-1U-unsplash.jpg" alt="" width="300px">
+            </div>
             <div class="text">
                 <div>Hi there,</div>
                 <div>Mr.Potato Head</div>
@@ -152,28 +156,36 @@
             <div class="name">Trending</div>
             <div class="content">
                 <button class="acc1">
-                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="imgWrapr">
+                        <img src="pics/bobby-iv-iPOZ3U5_ef8-unsplash.jpg" alt="" width="100px">
+                    </div>
                     <div class="textWrapr">
                         <div class="at">@Tegan</div>
                         <div class="desc">World Peace Builder</div>
                     </div>
                 </button>
                 <button class="acc2">
-                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="imgWrapr">
+                        <img src="pics/cody-scott-milewski-56qQITwL_Fs-unsplash.jpg" alt="" width="150px">
+                    </div>
                     <div class="textWrapr">
                         <div class="at">@Morgan</div>
                         <div class="desc">Super Cool Project</div>
                     </div>
                 </button>
                 <button class="acc3">
-                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="imgWrapr">
+                        <img src="pics/nobiur-rahman-27PzIFtgPBk-unsplash.jpg" alt="" width="100px">
+                    </div>
                     <div class="textWrapr">
                         <div class="at">@Kendall</div>
                         <div class="desc">Life Changing App</div>
                     </div>
                 </button>
                 <button class="acc4">
-                    <img src="pics/jayanth-muppaneni-eyUK67LS-n8-unsplash.jpg" alt="" width="50px">
+                    <div class="imgWrapr">
+                        <img src="pics/rick-gebhardt-_c7hWYN28m8-unsplash.jpg" alt="" width="70px">
+                    </div>
                     <div class="textWrapr">
                         <div class="at">@Alex</div>
                         <div class="desc">No Traffic Maker</div>
