finish header and add button hover

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     </div>
     <div class="header">
         <div class="topHalf">
-            <img src="pics/magnify.svg" alt="" width="30px">
+            <button class="search"><img src="pics/magnify.svg" alt="" width="30px"></button>
             <input type="text">
             <img src="pics/bell-badge-outline.svg" alt="" width="30px">            
             <div class="imgWrapr">
                 <img src="pics/bobby-iv-6aFkS2Ka-1U-unsplash.jpg" alt="" width="200px" >
             </div>            
-            <div>Mr.Potato Head</div>
+            <div class="accName">Mr.Potato Head</div>
         </div>
         <div class="bottomHalf">
             <div class="imgWrapr">
@@ -66,7 +66,7 @@
             </div>
             <div class="text">
                 <div>Hi there,</div>
-                <div>Mr.Potato Head</div>
+                <div>Mr.Potato Head (@Potato)</div>
             </div>
             <button class="new">New</button>
             <button class="upload">Upload</button>
