add buttons for sidebar

--- a/index.html
+++ b/index.html
@@ -13,42 +13,60 @@
             <img src="pics/1532178198.svg" alt="" width="50px">
             <div>Dashboard</div>
         </div>
-        <div class="sidebarContent home">
-            <img src="pics/home-circle.svg" alt="" width="30px">
-            <div>Home</div>
-        </div>
-        <div class="sidebarContent profile">
-            <img src="pics/card-account-details.svg" alt="" width="30px">            
-            <div>Profile</div>
-        </div>
-        <div class="sidebarContent messages">
-            <img src="pics/message-text.svg" alt="" width="30px">            
-            <div>Messages</div>
-        </div>
-        <div class="sidebarContent history">
-            <img src="pics/history.svg" alt="" width="30px">            
-            <div>History</div>
-        </div>
-        <div class="sidebarContent tasks">
-            <img src="pics/checkbox-marked-circle-auto-outline.svg" alt="" width="30px">            
-            <div>Tasks</div>
-        </div>
-        <div class="sidebarContent communities">
-            <img src="pics/account-group.svg" alt="" width="30px">            
-            <div>Communities</div>
-        </div>
-        <div class="sidebarContent settings">
-            <img src="pics/cog.svg" alt="" width="30px">            
-            <div>Settings</div>
-        </div>
-        <div class="sidebarContent support">
-            <img src="pics/help-box.svg" alt="" width="30px">            
-            <div>Support</div>
-        </div>
-        <div class="sidebarContent privacy">
-            <img src="pics/shield-lock.svg" alt="" width="30px">            
-            <div>Privacy</div>
-        </div>
+        <button class="home">
+            <div class="sidebarContent home">
+                <img src="pics/home-circle.svg" alt="" width="30px">
+                <div>Home</div>
+            </div>
+        </button>
+        <button class="profile">
+            <div class="sidebarContent profile">
+                <img src="pics/card-account-details.svg" alt="" width="30px">
+                <div>Profile</div>
+            </div>
+        </button>
+        <button class="messages">
+            <div class="sidebarContent messages">
+                <img src="pics/message-text.svg" alt="" width="30px">
+                <div>Messages</div>
+            </div>
+        </button>
+        <button class="history">
+            <div class="sidebarContent history">
+                <img src="pics/history.svg" alt="" width="30px">
+                <div>History</div>
+            </div>
+        </button>
+        <button class="tasks">
+            <div class="sidebarContent tasks">
+                <img src="pics/checkbox-marked-circle-auto-outline.svg" alt="" width="30px">
+                <div>Tasks</div>
+            </div>
+        </button>
+        <button class="communities">
+            <div class="sidebarContent communities">
+                <img src="pics/account-group.svg" alt="" width="30px">
+                <div>Communities</div>
+            </div>
+        </button>
+        <button class="settings">
+            <div class="sidebarContent settings">
+                <img src="pics/cog.svg" alt="" width="30px">
+                <div>Settings</div>
+            </div>
+        </button>
+        <button class="support">
+            <div class="sidebarContent support">
+                <img src="pics/help-box.svg" alt="" width="30px">
+                <div>Support</div>
+            </div>
+        </button>
+        <button class="privacy">
+            <div class="sidebarContent privacy">
+                <img src="pics/shield-lock.svg" alt="" width="30px">
+                <div>Privacy</div>
+            </div>
+        </button>
     </div>
     <div class="header">
         <div class="topHalf">
