add buttons to cards

--- a/index.html
+++ b/index.html
@@ -101,9 +101,15 @@
                         <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                     </div>
                     <div class="butn">
-                        <button class="fav"></button>
-                        <button class="watch"></button>
-                        <button class="share"></button>
+                        <button class="fav">
+                            <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                        </button>
+                        <button class="watch">
+                            <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                        </button>
+                        <button class="share">
+                            <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                        </button>
                     </div>
                 </div>
                 <div class="card2"><div class="Ccont">
@@ -111,45 +117,75 @@
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
                 <div class="butn">
-                    <button class="fav"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
+                    <button class="fav">
+                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="watch">
+                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="share">
+                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                    </button>
                 </div></div>
                 <div class="card3"><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
                 <div class="butn">
-                    <button class="fav"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
+                    <button class="fav">
+                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="watch">
+                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="share">
+                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                    </button>
                 </div></div>
                 <div class="card4"><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
                 <div class="butn">
-                    <button class="fav"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
+                    <button class="fav">
+                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="watch">
+                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="share">
+                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                    </button>
                 </div></div>
                 <div class="card5"><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
                 <div class="butn">
-                    <button class="fav"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
+                    <button class="fav">
+                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="watch">
+                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="share">
+                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                    </button>
                 </div></div>
                 <div class="card6"><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
                 <div class="butn">
-                    <button class="fav"></button>
-                    <button class="watch"></button>
-                    <button class="share"></button>
+                    <button class="fav">
+                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="watch">
+                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="share">
+                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                    </button>
                 </div></div>
             </div>
         </div>
