add final decoration to cards

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <div class="topHalf">
             <button class="search"><img src="pics/magnify.svg" alt="" width="30px"></button>
             <input type="text">
-            <img src="pics/bell-badge-outline.svg" alt="" width="30px">            
+            <button class="notif">
+                <img src="pics/bell-badge-outline.svg" alt="" width="30px">
+            </button>            
             <div class="imgWrapr">
                 <img src="pics/bobby-iv-6aFkS2Ka-1U-unsplash.jpg" alt="" width="200px" >
             </div>            
@@ -96,6 +98,7 @@
             <div class="name">Your Projects</div>
             <div class="cards">
                 <div class="card1">
+                    <div class="line"></div>
                     <div class="Ccont">
                         <div class="title">Super cool Project</div>
                         <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
@@ -112,7 +115,24 @@
                         </button>
                     </div>
                 </div>
-                <div class="card2"><div class="Ccont">
+                <div class="card2">
+                    <div class="line"></div>
+                    <div class="Ccont">
+                        <div class="title">Super cool Project</div>
+                        <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
+                    </div>
+                    <div class="butn">
+                    <button class="fav">
+                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="watch">
+                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
+                    </button>
+                    <button class="share">
+                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
+                    </button>
+                </div></div>
+                <div class="card3"><div class="line"></div><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
@@ -127,7 +147,7 @@
                         <img src="pics/share-variant-outline.svg" alt="" width="30px">
                     </button>
                 </div></div>
-                <div class="card3"><div class="Ccont">
+                <div class="card4"><div class="line"></div><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
@@ -142,7 +162,7 @@
                         <img src="pics/share-variant-outline.svg" alt="" width="30px">
                     </button>
                 </div></div>
-                <div class="card4"><div class="Ccont">
+                <div class="card5"><div class="line"></div><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
@@ -157,22 +177,7 @@
                         <img src="pics/share-variant-outline.svg" alt="" width="30px">
                     </button>
                 </div></div>
-                <div class="card5"><div class="Ccont">
-                    <div class="title">Super cool Project</div>
-                    <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
-                </div>
-                <div class="butn">
-                    <button class="fav">
-                        <img src="pics/star-plus-outline.svg" alt="" width="30px">
-                    </button>
-                    <button class="watch">
-                        <img src="pics/eye-plus-outline.svg" alt="" width="30px">
-                    </button>
-                    <button class="share">
-                        <img src="pics/share-variant-outline.svg" alt="" width="30px">
-                    </button>
-                </div></div>
-                <div class="card6"><div class="Ccont">
+                <div class="card6"><div class="line"></div><div class="Ccont">
                     <div class="title">Super cool Project</div>
                     <div class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum adipisci magnam officia sunt harum dolor architecto quasi amet unde ducimus non, aspernatur ut tenetur fugiat corrupti ullam, dolorum, temporibus labore!</div>
                 </div>
